LAU-1127 remove summary tables